Added: - controller - services for user, git and database - mappings
Fixed bugs in GitLab service.
