# github-gitlab-service/src/main/java/eu/profinit/githubgitlabservice/model/internal/GitUserWithProjects.java
@@ -1,0 +1,15 @@
+package eu.profinit.githubgitlabservice.model.internal;
+
+import lombok.Data;
+
+import java.util.List;
+
+@Data
+public class GitUserWithProjects {
+    private Long gitId;
+    private String username;
+    private String url;
+    private String name;
+    private String lastUpdate;
+    private List<GitProject> projects;
+}
